Updating sidebar z-index to fix the error of not been able to click in any buttons in mobile

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -120,6 +120,7 @@
     height: 100vh;
     min-height: auto;
     width: 100%;
+    z-index: 0;
 
     ul,
     nav {
